--- a/style.css
+++ b/style.css
@@ -1,21 +1,25 @@
+* {
+    padding: 0;
+    margin: 0;
+}
 body {
     display: flex;
     height: 100vh;
     margin: 0;
     font-family: Arial, sans-serif;
-  }
-  #editor, #preview {
+}
+#editor, #preview {
     flex: 1;
     padding: 10px;
     overflow-y: auto;
-  }
-  #editor {
+}
+#editor {
     border-right: 1px solid #ccc;
-  }
-  #preview {
+}
+#preview {
     padding: 20px;
     background-color: #f9f9f9;
-  }
-  .CodeMirror {
+}
+.CodeMirror {
     height: 100%;
-  }
+}
